--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portifólio</title>
+    <title>Home</title>
 </head>
 <body>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        </nav>
+
+    </header>
 
     <main class="apresentacao">
 
@@ -14,19 +21,27 @@
 
             <h1 class="apresentacao__conteudo__titulo">TRANSFORME SUAS IDEIAS EM REALIDADE <span class="titulo__destaque">COM UM CÓDIGO DE QUALIDADE!</span></h1>
 
-            <p class="apresentacao__conteudo__texto">Olá! Sou Davi de Castro, estudante de Engenharia de Computação na Universidade de Taubaté. Tenho experiência em Python e atualmente me aprofundo no desenvolvimento web para criar interfaces gráficas eficientes e impactantes. Vamos juntos trazer suas ideias ao mundo digital?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Meu nome é Davi de Castro, estudante de Engenharia de Computação na Universidade de Taubaté. Tenho experiência com a linguagem Python e atualmente me aprofundo no desenvolvimento web para criar interfaces gráficas responsivas utilizando HTML e CSS. Vamos juntos trazer suas ideias ao mundo digital?</p>
 
             <div class="apresentacao__conteudo__botoes">
 
-                <a class="apresentacao__conteudo__botao" href="https://github.com/Davi1403">GitHub</a>
-                <a class="apresentacao__conteudo__botao" href="https://linkedin.com/in/davicrsantos">Linkedin</a>
+                <a class="apresentacao__conteudo__botoes__botao" href="https://github.com/Davi1403">
+                    <img src="./assets/github.png" alt="GitHub Icon">
+                    GitHub</a>
+                <a class="apresentacao__conteudo__botoes__botao" href="https://linkedin.com/in/davicrsantos">
+                    <img src="./assets/linkedin.png" alt="Linkedin Icon">
+                    Linkedin</a>
 
             </div>
         </section>
 
-        <img class="apresentacao__imagem" src="davi.png" alt="Davi" width="480">
+        <img class="apresentacao__imagem" src="./assets/davi.png" alt="Davi" width="480">
 
     </main>
+
+    <footer class="rodape">
+        <p>Desenvolvido por Davi</p>
+    </footer>
     
 </body>
 </html>
