--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </section>
 
-        <img class="apresentacao__imagem" src="./assets/davi.png" alt="Davi" width="480">
+        <img class="apresentacao__imagem" src="./assets/davi.png" alt="Davi">
 
     </main>
 
