--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <h1 class="apresentacao__conteudo__titulo">TRANSFORME SUAS IDEIAS EM REALIDADE <span class="titulo__destaque">COM UM CÓDIGO DE QUALIDADE!</span></h1>
 
-            <p class="apresentacao__conteudo__texto">Olá! Meu nome é Davi de Castro, estudante de Engenharia de Computação na Universidade de Taubaté. Tenho experiência com a linguagem Python e atualmente me aprofundo no desenvolvimento web para criar interfaces gráficas responsivas utilizando HTML e CSS. Vamos juntos trazer suas ideias ao mundo digital?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Meu nome é Davi de Castro, estudante de Engenharia de Computação na Universidade de Taubaté. Tenho experiência com a linguagem Python e atualmente me aprofundo na programação orientada a objetos com Java. Vamos juntos trazer suas ideias ao mundo digital?</p>
 
             <div class="apresentacao__conteudo__botoes">
 
